United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7120038 G1: ParallelGCThreads==0 is broken
7120038 : G1: ParallelGCThreads==0 is broken

Details
Type:
Bug
Submit Date:
2011-12-09
Status:
Closed
Updated Date:
2012-03-29
Project Name:
JDK
Resolved Date:
2012-01-20
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
7u4
Fixed Versions:
hs23

Related Reports
Backport:
Backport:

Sub Tasks

Description
While testing the changes for 7119908 I ran the GC test suite with -XX:ParallelGCThreads==0 and got several failures - specifically in GCBasher and dacapo2006.

The bulk of these failures were SEGVs due to accessing the FlexibleWorkGang (which does not exist when whne PGCT==0), others were asserts.

There is an RFE to remove the PGCT==0 specific code but until then...

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/adedfbbf0360
                                     
2012-03-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/adedfbbf0360
                                     
2011-12-17
EVALUATION

Various SEGVs and asserts when PGCT==0. Most are the result of accessing the worker gang (which is only created when PGCT!=0) outside of a suitable guard.
                                     
2011-12-09



Hardware and Software, Engineered to Work Together